data/derived/fa15/progs/unify/prog3141.ml.out
Characters 29-45:
  let fixpoint (f,b) = wwhile ((helper (f,b,b)), b);;
                               ^^^^^^^^^^^^^^^^
Error: This expression has type (('a -> 'a) * 'a * 'a) * bool
       but an expression was expected of type 'b -> 'b * bool
